--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Infinite Mario - JavaScript</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
+    ></script>
     <script type="text/javascript" src="//www.midijs.net/lib/midi.js"></script>
-</head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+  </head>
 
-<body>
-    <canvas id="canvas" width="640" height="480">
+  <body style="margin: 0px">
+    <canvas id="canvas" style="height: 100%; width: 100%; position: absoulte;">
       <p>Your browser does not support the canvas element.</p>
     </canvas>
 
@@ -63,12 +69,10 @@
 
     <script src="/SGAME.js"></script>
 
-
     <script>
-        $(document).ready(function() {
-            new Enjine.Application().Initialize(new Mario.LoadingState(), 320, 240);
-        });
+      $(document).ready(function () {
+        new Enjine.Application().Initialize(new Mario.LoadingState(), 320, 240);
+      });
     </script>
-</body>
-
+  </body>
 </html>
