--- a/index.html
+++ b/index.html
@@ -7,16 +7,39 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
     ></script>
     <script type="text/javascript" src="//www.midijs.net/lib/midi.js"></script>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
   </head>
+  <style>
+    body,
+    html {
+      margin: 0px;
+      height: 100%;
+    }
 
-  <body style="margin: 0px">
-    <canvas id="canvas" style="height: 100%; width: 100%; position: absoulte;">
-      <p>Your browser does not support the canvas element.</p>
-    </canvas>
+    #game-container {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgb(2,0,36);
+background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(226,210,101,1) 8%, rgba(145,211,156,1) 41%, rgba(128,211,168,1) 48%, rgba(116,211,176,1) 53%, rgba(91,211,193,1) 63%, rgba(42,212,226,1) 83%, rgba(0,212,255,1) 100%);
+    }
+
+    #canvasa {
+      height: 480px;
+      width: 640px;
+      display: block;
+      margin: auto;
+      aspect-ratio: auto 640 / 480;
+    }
+  </style>
+
+  <body>
+    <div id="game-container">
+      <canvas id="canvas" width="640" height="480">
+        <p>Your browser does not support the canvas element.</p>
+      </canvas>
+    </div>
 
     <!-- Enjine Includes -->
     <script src="Enjine/core.js"></script>
