--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: rgb(2,0,36);
-background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(226,210,101,1) 8%, rgba(145,211,156,1) 41%, rgba(128,211,168,1) 48%, rgba(116,211,176,1) 53%, rgba(91,211,193,1) 63%, rgba(42,212,226,1) 83%, rgba(0,212,255,1) 100%);
+      background: -webkit-linear-gradient(360deg, #383836 10%, #4a4a4a 360%);
+      background: linear-gradient(360deg, #383836 10%, #4a4a4a 360%);
     }
-
     #canvasa {
       height: 480px;
       width: 640px;
