--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: -webkit-linear-gradient(360deg, #383836 10%, #4a4a4a 360%);
-      background: linear-gradient(360deg, #383836 10%, #4a4a4a 360%);
+      background-color: white;
     }
-    #canvasa {
-      height: 480px;
-      width: 640px;
+    #canvas {
+      height: 511px;
+      width: 680px;
       display: block;
       margin: auto;
       aspect-ratio: auto 640 / 480;
+      border-radius: 8px;
     }
   </style>
 
